# voice-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  docker-compose.yml
src/: main.rs  models.rs  session.rs  state.rs  ws.rs
src/handlers/auth/: auth.rs
src/handlers/users/: users.rs
src/middlewares/: stt.rs
src/migrations/: create_texts_table.sql  create_users_table.sql  migrations.sql
src/sql/: create_user.sql  find_user_by_name.sql  get_user_texts.sql  get_users.sql  save_user_text.sql
