[package]
name = "voice-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix = "0.13"
tonic-build = "0.12.3"
tonic = { version = "0.12.3" , features = ["transport","tls","tls-roots","tls-webpki-roots"]}
prost = "0.13.5"
prost-types = "0.13.5"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.139"
futures-util = "0.3.31"
actix-ws = "0.3.0"
bytes = "1.10.0"
tokio = { version = "1.43.0", features = ["fs"] }
libsql = "0.6.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }

[build-dependencies]
tonic-build = "0.12.3"
